--- a/app/package.json
+++ b/app/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.21.1",
     "expo": "~39.0.2",
     "expo-asset": "~8.2.0",
     "expo-camera": "~9.0.0",
