--- a/backend/environment.yml
+++ b/backend/environment.yml
@@ -5,6 +5,8 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - autopep8=1.5.5=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - bcrypt=3.2.0=py38h7b6447c_0
   - blas=1.0=mkl
   - brotlipy=0.7.0=py38h27cfd23_1003
   - ca-certificates=2021.1.19=h06a4308_0
@@ -15,16 +17,27 @@ dependencies:
   - conda-package-handling=1.7.2=py38h03888b9_0
   - cryptography=3.3.1=py38h3c74f83_1
   - cudatoolkit=10.1.243=h6bb024c_0
+  - decorator=4.4.2=pyhd3eb1b0_0
+  - ecdsa=0.16.1=pyhd3eb1b0_0
   - freetype=2.10.4=h5ab3b9f_0
+  - future=0.18.2=py38_1
+  - gmp=6.2.1=h2531618_2
   - idna=2.10=pyhd3eb1b0_0
   - intel-openmp=2020.2=254
+  - ipykernel=5.3.4=py38h5ca1d4c_0
+  - ipython=7.20.0=py38hb070fc8_1
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - jedi=0.17.0=py38_0
   - jpeg=9b=h024ee3a_2
+  - jupyter_client=6.1.7=py_0
+  - jupyter_core=4.7.1=py38h06a4308_0
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
   - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_1
   - libuv=1.40.0=h7b6447c_0
@@ -39,30 +52,46 @@ dependencies:
   - numpy-base=1.19.2=py38hfa32c7d_0
   - olefile=0.46=py_0
   - openssl=1.1.1j=h27cfd23_0
+  - parso=0.8.1=pyhd3eb1b0_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=8.1.0=py38he98fc37_0
   - pip=21.0.1=py38h06a4308_0
+  - prompt-toolkit=3.0.8=py_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pycodestyle=2.6.0=pyhd3eb1b0_0
   - pycosat=0.6.3=py38h7b6447c_1
   - pycparser=2.20=py_2
+  - pycryptodome=3.10.1=py38h3dc18e1_0
+  - pydantic=1.7.3=py38h27cfd23_0
+  - pygments=2.8.0=pyhd3eb1b0_0
   - pyopenssl=20.0.1=pyhd3eb1b0_1
   - pysocks=1.7.1=py38h06a4308_0
   - python=3.8.5=h7579374_1
+  - python-dateutil=2.8.1=pyhd3eb1b0_0
+  - python-jose=3.2.0=py_0
   - pytorch=1.7.1=py3.8_cuda10.1.243_cudnn7.6.3_0
+  - pyzmq=20.0.0=py38h2531618_1
   - readline=8.1=h27cfd23_0
   - requests=2.25.1=pyhd3eb1b0_0
   - ruamel_yaml=0.15.87=py38h7b6447c_1
   - setuptools=52.0.0=py38h06a4308_0
   - six=1.15.0=py38h06a4308_0
+  - sqlalchemy=1.3.23=py38h27cfd23_0
   - sqlite=3.33.0=h62c20be_0
   - tk=8.6.10=hbc83047_0
   - toml=0.10.1=py_0
   - torchvision=0.8.2=py38_cu101
+  - tornado=6.1=py38h27cfd23_0
   - tqdm=4.56.0=pyhd3eb1b0_0
+  - traitlets=5.0.5=pyhd3eb1b0_0
   - typing_extensions=3.7.4.3=pyha847dfd_0
   - urllib3=1.26.3=pyhd3eb1b0_0
+  - wcwidth=0.2.5=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
   - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.3=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
@@ -71,9 +100,10 @@ dependencies:
       - matplotlib==3.3.4
       - oauthlib==3.1.0
       - opencv-python==4.5.1.48
+      - python-dotenv==0.15.0
       - starlette==0.13.6
       - tensorboard==2.4.1
       - tensorboard-plugin-wit==1.8.0
       - uvicorn==0.13.4
       - werkzeug==1.0.1
-prefix: /home/kushal/miniconda3
+prefix: /home/kushal/miniconda3/envs/fewshot
