--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,3 +14,4 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 RUN python -m pip install detectron2 -f \
     https://dl.fbaipublicfiles.com/detectron2/wheels/cu102/torch1.7/index.html
+RUN apt install -y sqlite3
